--- a/trunk/MonoTouch.Examples/RemoteInfo/Server/RemoteInfo.ServiceModel/RemoteInfo.ServiceModel.csproj
+++ b/trunk/MonoTouch.Examples/RemoteInfo/Server/RemoteInfo.ServiceModel/RemoteInfo.ServiceModel.csproj
@@ -41,9 +41,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Services" />
-    <Reference Include="System.Runtime.Serialization, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\Library\Frameworks\Mono.framework\Versions\2.6\lib\mono\gac\System.Runtime.Serialization\3.0.0.0__b77a5c561934e089\System.Runtime.Serialization.dll</HintPath>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +50,7 @@
     <Compile Include="Types\DirectoryResult.cs" />
     <Compile Include="Operations\GetDirectoryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Operations\GetTextFile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
