--- a/Common/ServiceStack.Common/ServiceStack.Messaging/ServiceStack.Messaging.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Messaging/ServiceStack.Messaging.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MessageQueueUri.cs" />
     <Compile Include="MessagingHostBase.cs" />
     <Compile Include="Client\AmqpServiceClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
