--- a/Common/ServiceStack.Interfaces/ServiceStack.DataAnnotations/ServiceStack.DataAnnotations.csproj
+++ b/Common/ServiceStack.Interfaces/ServiceStack.DataAnnotations/ServiceStack.DataAnnotations.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D732C853-AB76-4277-B6CE-6C7DA57901B7}</ProjectGuid>
+    <ProjectGuid>{9B64E174-0CDE-4CA7-9344-62E40FA3DE65}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceStack.DataAccess</RootNamespace>
-    <AssemblyName>ServiceStack.DataAccess</AssemblyName>
+    <RootNamespace>ServiceStack.DataAnnotations</RootNamespace>
+    <AssemblyName>ServiceStack.DataAnnotations</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,27 +32,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Criteria\ICriteria.cs" />
-    <Compile Include="Criteria\IOrderAscendingCriteria.cs" />
-    <Compile Include="Criteria\IOrderDescendingCriteria.cs" />
-    <Compile Include="Criteria\IPagingCriteria.cs" />
-    <Compile Include="Criteria\PagingCriteria.cs" />
-    <Compile Include="DataAccessException.cs" />
-    <Compile Include="IAggregatable.cs" />
-    <Compile Include="IBasicPersistenceProvider.cs" />
-    <Compile Include="IPersistenceProvider.cs" />
-    <Compile Include="IPersistenceProviderManager.cs" />
-    <Compile Include="IPersistenceProviderManagerFactory.cs" />
-    <Compile Include="IQueryableByComparer.cs" />
-    <Compile Include="IQueryableByExample.cs" />
-    <Compile Include="IQueryableByPredicate.cs" />
-    <Compile Include="IQueryablePersistenceProvider.cs" />
-    <Compile Include="IResultSet.cs" />
-    <Compile Include="ITransactionContext.cs" />
+    <Compile Include="AliasAttribute.cs" />
+    <Compile Include="DefaultAttribute.cs" />
+    <Compile Include="IndexAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IQueryable.cs" />
+    <Compile Include="ReferencesAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
